--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "typescript": "4.8.4"
   },
   "devDependencies": {
