--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "swiper": "^8.4.6",
     "typescript": "4.8.4"
   },
   "devDependencies": {
